Fixed overlapping stylings.

--- a/cinema-app/src/Pages/frontPage/frontPage.module.css
+++ b/cinema-app/src/Pages/frontPage/frontPage.module.css
@@ -1,20 +1,3 @@
-body {
-	background: #f6f5f7;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	font-family: 'Montserrat', sans-serif;
-	margin: -50px 0 50px;
-}
-
-.wrapper{
-	background-color: #fff;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-			0 10px 10px rgba(0,0,0,0.22);
-	position: relative;
-	overflow: hidden;
-	min-height: 480px;
-    margin: auto;
-
+.box{
+	margin-top: 130px;
 }
