--- a/cinema-app/src/index.css
+++ b/cinema-app/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin-top: 0px;
+  padding: 0px;
 }
 
 code {
